--- a/estilos/principal.css
+++ b/estilos/principal.css
@@ -1,5 +1,4 @@
 body {
-	background-color: rgb(121, 121, 121);
 	color: rgba(0,0,0,1);
 	display: flex;
 	align-items: center;
@@ -55,4 +54,9 @@ footer#rodape {
 footer#rodape p {
 	text-align: center;
 	color:gray;
+}
+
+table#cab {
+	width:700px;
+	
 }
